--- a/frontend/src/components/Phone.css
+++ b/frontend/src/components/Phone.css
@@ -1,39 +1,61 @@
 .phones-container {
+    margin-top: 20px;
+    width: fit-content;
+}
+
+.input-group {
     display: flex;
-    flex-direction: column;
     align-items: center;
-}
-
-.contact-type-input {
-    padding: 8px;
     margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
 }
 
+.contact-type-input,
 .phone-number-input {
-    padding: 8px;
-    margin-bottom: 10px;
+    padding: 5px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    margin-left: 30px;
+    font-size: 14px;
+    margin-right: 10px;
+    margin-top: -15px;
 }
 
 .add-button {
     background-color: #007bff;
-    color: white;
+    color: #fff;
     border: none;
     border-radius: 5px;
-    padding: 8px 16px;
+    padding: 10px 20px;
     cursor: pointer;
-    margin-left: 30px;
+    font-size: 14px;
+    margin-top: -25px;
 }
 
-.add-button:hover {
-    background-color: #0056b3;
+.table-container {
+    border-radius: 10px;
+    overflow: hidden;
+    border: 2px solid #ccc;
+    margin-top: -10px;
 }
 
 .contact-table {
     width: 100%;
-    margin-top: 20px;
+    border-collapse: collapse;
+}
+
+.contact-table th,
+.contact-table td {
+    border: 1px solid #ccc;
+    padding: 10px;
+    text-align: left;
+}
+
+.delete-button {
+    background-color: #ff6b6b;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    cursor: pointer;
+    font-size: 14px;
+    margin-left: 130px;
 }
