--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,13 +3,15 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #f5f5f5;
+    background-image: url(../src/autumn.gif);
     margin: 0;
     padding: 0;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background-image: url(../../frontend/src/autumn.gif);
+
 }
